<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rena_cuvslam_ros</name>
  <version>0.1.0</version>
  <description>ROS2 wrapper for PyCuVSLAM visual SLAM on OAK cameras</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <depend>message_filters</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
