<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rena_cuvslam_ros</name>
  <version>0.1.0</version>
  <description>
    C++ cuVSLAM RGB-D odometry node for the base OAK camera(s). Drives the rena
    cuVSLAM C++ API (cuvslam2.h, multi-depth ICP) directly — no Python wrapper —
    so DDS is drained at full camera rate and frames reach Track() at a constant
    30 fps. Drop-in replacement for the previous Python rena_cuvslam_ros node.
  </description>
  <maintainer email="sean@ndimensions.xyz">Rena Labs</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
